gratie-frontend/kubernetes/gratie-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gratie-frontend
  namespace: gratie
  labels:
    name: gratie-frontend
    app: gratie-frontend
spec:
  containers:
    - name: gratie-frontend
      image: ghcr.io/mucks/gratie-frontend:main
      imagePullPolicy: Always
      ports:
        - containerPort: 80
