gratie-frontend/kubernetes/gratie-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gratie-frontend-svc
  namespace: gratie
spec:
  selector:
    app: gratie-frontend
  ports:
    - port: 80
      name: http
