gratie-frontend/kubernetes/gratie-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gratie-frontend
  namespace: gratie
  labels:
    name: gratie-frontend
spec:
  rules:
    - host: gratie.mucks.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gratie-frontend-svc
                port:
                  number: 80
